--- a/calc.html
+++ b/calc.html
@@ -3,87 +3,21 @@
   <head>
     <meta charset="utf-8">
     <title>Demo</title>
-    <script src="jquery171.min.js"></script>
+
     <script src="sum.js"></script>
-    <style type="text/css">
-    .body{
-      width: 960px;
-      margin: 0 auto;
-    }
-    #calc_box{
-      width: 640px;
-      height: 145px;
-      border: 2px solid #000;
-      padding: 20px;
-    }
-    #left{
-      float: left;
-      font-size: 120px;
-    }
-    #type{
-      float: left;
-      font-size: 120px;
-    }
-    #right{
-      float: left;
-      font-size: 120px;
-    }
-    #equals{
-      float: left;
-      font-size: 120px;
-    }
-    #answer{
-      height: 140px;
-      font-size: 97px;
-      width: 240px;
-      position: relative;
-      top: -3px;
-      left: 20px;
-    }
-    div.right {
-      background: url("tick_cross.jpg") 0 0;
-      background-repeat: no-repeat;
-      width: 242px;
-      height: 400px;
-      position: relative;
-      top: -200px;
-      left: 700px;
-      display: none;
-    }
-    div.wrong {
-      background: url("tick_cross.jpg") -250px 0;
-      background-repeat: no-repeat;
-      width: 242px;
-      height: 400px;
-      position: relative;
-      top: -270px;
-      left: 700px;
-      display: none;
-    }
-    </style>
+
   </head>
   <body>
-    <div id="calc_box">
-      <div id="left"></div>
-      <div id="type"></div>
-      <div id="right"></div>
-      <div id="equals">=</div>
-      <input type="text" name="answer" id="answer" tabindex=1/>
-    </div>
 
-    <div class="right"></div>
-    <div class="wrong"></div>
+
+    <script src="/socket.io/socket.io.js"></script>
     <script type="text/javascript">
-      setup();
-      $('body').keyup(function(e){
-        if(e.keyCode == 13){
-          if ($("#answer").val() == answer){
-            flash("right");
-          } else {
-            flash("wrong")
-          }
-        }
-      })
+
+      var socket = io.connect();
+      socket.on('welcome', function (data) {
+        console.log(data.text);
+      });
+
     </script>
   </body>
 </html>
